--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg " id="ftco-navbar" style="background-color: #11153C;">
+    <nav class="navbar navbar-expand-lg "  style="background-color: #11153C;">
 
 
         <div class="container">
@@ -28,9 +28,9 @@
 
             <div class="col-md-8">
                 <div class="navbar-collapse collapse" id="ftco-nav">
-                    <ul class="navbar-nav mx-auto">
+                    <ul class="navbar-nav mx-auto ">
                         <li class="nav-item m-2">
-                            <a href="index.html" class="nav-link">Services</a>
+                            <a href="index.html" class="nav-link ">Services</a>
                         </li>
                         <li class="nav-item m-2">
                             <a href="index.html" class="nav-link">About us</a>
@@ -408,7 +408,7 @@
         <div class="container">
             <div class="row">
                 <div class="column">
-                    <h2>
+                    <h2 class="text-white">
                         AI-Powered Success in <br>
                         <span class="pink-head">Healthcare</span>
                     </h2>
@@ -1013,8 +1013,8 @@
     <section style="background-size:cover; background-image:url(assets/Footer.png);" class="spacing-tb">
         <div class="container">
             <div class="row ">
-                <div class="col-md-6 my-auto">
-                    <img src="assets/Container.png" alt="">
+                <div class="col-md-6 my-auto ">
+                    <img src="assets/Container.png" alt="" class="pb-4">
                     <p>
                         Providing exceptional healthcare with a compassionate touch. <br>
                         Our mission is to enhance the health and well- <br>
@@ -1026,7 +1026,7 @@
                     <div class="row">
                         <div class="col-md-6 text-white">
                             
-                                Quick links
+                                <p class="ps-3">Quick link</p>
                                 <ul>
                                 <li>About Us</li>
                                 <li>Insights</li>
@@ -1041,7 +1041,7 @@
                         <div class="col-md-6 text-white">
 
                             
-                                Contact
+                              <p class="ps-3">Contact</p>  
                             <ul>
                                 <li>123 Health St, Medtown</li>
                                 <li>(123) 456-7890</li>
@@ -1064,12 +1064,6 @@
         </div>
 
     </section>
-
-
-
-
-
-
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
